--- a/arch/arm64/configs/X00QD_defconfig
+++ b/arch/arm64/configs/X00QD_defconfig
@@ -3748,6 +3748,8 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=160
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=250
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
