--- a/arch/arm64/configs/X00QD_defconfig
+++ b/arch/arm64/configs/X00QD_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Coldplaylite"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -73,7 +73,6 @@ CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_MSI_IRQ=y
 CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
-# CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
@@ -135,6 +134,10 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # Scheduler features
 #
+# CONFIG_PELT_HALFLIFE_32 is not set
+CONFIG_PELT_HALFLIFE_16=y
+# CONFIG_PELT_HALFLIFE_12 is not set
+# CONFIG_PELT_HALFLIFE_8 is not set
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
@@ -143,6 +146,7 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
+# CONFIG_CGROUP_SCHEDTUNE is not set
 # CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
@@ -157,9 +161,11 @@ CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
-CONFIG_SCHED_TUNE=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_TUNE=y
+# CONFIG_STUNE_ASSIST is not set
+# CONFIG_CPUSETS_ASSIST is not set
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -174,6 +180,7 @@ CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
+CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_BPF=y
@@ -184,7 +191,6 @@ CONFIG_MULTIUSER=y
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
@@ -210,7 +216,6 @@ CONFIG_PERF_USE_VMALLOC=y
 # Kernel Performance Events And Counters
 #
 CONFIG_PERF_EVENTS=y
-# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
@@ -252,7 +257,6 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_THIN_ARCHIVES=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -271,7 +275,6 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 #
 # GCOV-based kernel profiling
 #
-# CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
@@ -314,7 +317,6 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_BFQ is not set
@@ -365,7 +367,6 @@ CONFIG_PCI_SYSCALL=y
 CONFIG_PCI_BUS_ADDR_T_64BIT=y
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-# CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
 # CONFIG_PCI_STUB is not set
 # CONFIG_PCI_IOV is not set
@@ -396,7 +397,6 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
-CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -413,6 +413,8 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=240
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -420,8 +422,6 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_QCOM_TLB_EL2_HANDLER is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
-CONFIG_LITTLE_CPU_MASK=15
-CONFIG_BIG_CPU_MASK=240
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
@@ -467,8 +467,6 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
-# CONFIG_CMA_DEBUG is not set
-# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -597,8 +595,12 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
@@ -932,7 +934,6 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1060,8 +1061,6 @@ CONFIG_BT_BREDR=y
 # CONFIG_BT_HIDP is not set
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
-# CONFIG_BT_SELFTEST is not set
-CONFIG_BT_DEBUGFS=y
 
 #
 # Bluetooth device drivers
@@ -1092,7 +1091,6 @@ CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 # CONFIG_CFG80211_REG_RELAX_NO_IR is not set
 CONFIG_CFG80211_DEFAULT_PS=y
-# CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_CFG80211_WEXT is not set
@@ -1138,8 +1136,6 @@ CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
 CONFIG_ALLOW_DEV_COREDUMP=y
-# CONFIG_DEBUG_DRIVER is not set
-# CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
 CONFIG_GENERIC_CPU_AUTOPROBE=y
@@ -1150,7 +1146,6 @@ CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_SWR=y
-# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -1203,7 +1198,6 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_WRITEBACK is not set
-# CONFIG_ZRAM_MEMORY_TRACKING is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -1445,7 +1439,8 @@ CONFIG_MII=y
 CONFIG_NET_CORE=y
 CONFIG_BONDING=y
 CONFIG_DUMMY=y
-# CONFIG_WIREGUARD is not set
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 # CONFIG_EQUALIZER is not set
 # CONFIG_NET_FC is not set
 # CONFIG_IFB is not set
@@ -2031,7 +2026,6 @@ CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_SPI=y
-# CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
 
 #
@@ -2091,7 +2085,6 @@ CONFIG_PINCTRL=y
 CONFIG_PINMUX=y
 CONFIG_PINCONF=y
 CONFIG_GENERIC_PINCONF=y
-# CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_SINGLE is not set
 # CONFIG_PINCTRL_BAYTRAIL is not set
@@ -2121,7 +2114,6 @@ CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIO_ACPI=y
 CONFIG_GPIOLIB_IRQCHIP=y
-# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -2135,7 +2127,6 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_GRGPIO is not set
 # CONFIG_GPIO_PL061 is not set
 CONFIG_GPIO_QPNP_PIN=y
-# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_VX855 is not set
 # CONFIG_GPIO_XGENE is not set
@@ -2962,7 +2953,7 @@ CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_INT_CODEC=y
 CONFIG_SND_SOC_EXT_CODEC=y
 # CONFIG_SND_SOC_MSM8996_VM is not set
-CONFIG_SND_SOC_MSM8998=y
+# CONFIG_SND_SOC_MSM8998 is not set
 CONFIG_SND_SOC_SDM660_COMMON=y
 # CONFIG_SND_SOC_QCOM is not set
 
@@ -3056,7 +3047,7 @@ CONFIG_SND_SOC_WCD_SPI=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_SDM660_CDC=y
-# CONFIG_SOUND_CONTROL is not set
+CONFIG_SOUND_CONTROL=y
 CONFIG_SND_SOC_MSM_SDW=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -3311,9 +3302,7 @@ CONFIG_MSM_QUSB_PHY=y
 # CONFIG_USB_ULPI is not set
 CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
-# CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
-# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 
@@ -3827,7 +3816,6 @@ CONFIG_RMNET_IPA=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
-# CONFIG_IPA_UT is not set
 CONFIG_GPIO_USB_DETECT=y
 # CONFIG_MSM_MHI is not set
 # CONFIG_MSM_11AD is not set
@@ -3955,7 +3943,6 @@ CONFIG_MSM_SPSS_UTILS=y
 CONFIG_MSM_SMP2P=y
 # CONFIG_MSM_SMP2P_TEST is not set
 CONFIG_MSM_QMI_INTERFACE=y
-# CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 # CONFIG_QCOM_GSBI is not set
@@ -3974,7 +3961,6 @@ CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
 # CONFIG_QCOM_EARLY_DOMAIN is not set
 # CONFIG_QCOM_SCM_XPU is not set
-# CONFIG_QCOM_SCM_ERRATA is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_IRQ_HELPER=y
 # CONFIG_QCOM_MEMORY_DUMP is not set
@@ -4001,6 +3987,7 @@ CONFIG_MSM_QDSP6_NOTIFIER=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_CDSP_LOADER=y
 # CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_MSM_PIL=y
@@ -4012,11 +3999,8 @@ CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
 # CONFIG_MSM_KERNEL_PROTECT is not set
-# CONFIG_QCOM_REMOTEQDSS is not set
 CONFIG_MSM_SERVICE_NOTIFIER=y
 # CONFIG_MSM_QBT1000 is not set
-# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
-# CONFIG_MSM_RPM_LOG is not set
 # CONFIG_MSM_RPM_STATS_LOG is not set
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_WCD_DSP_GLINK=y
@@ -4369,7 +4353,6 @@ CONFIG_ACPI_THERMAL=y
 # CONFIG_ACPI_PCI_SLOT is not set
 CONFIG_ACPI_CONTAINER=y
 # CONFIG_ACPI_HED is not set
-# CONFIG_ACPI_CUSTOM_METHOD is not set
 CONFIG_ACPI_REDUCED_HARDWARE_ONLY=y
 # CONFIG_PMIC_OPREGION is not set
 
@@ -4398,7 +4381,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -4575,97 +4557,54 @@ CONFIG_NLS_UTF8=y
 #
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
-# CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
-# CONFIG_DEBUG_INFO_REDUCED is not set
-# CONFIG_DEBUG_INFO_SPLIT is not set
-# CONFIG_DEBUG_INFO_DWARF4 is not set
-# CONFIG_GDB_SCRIPTS is not set
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
 # CONFIG_STRIP_ASM_SYMS is not set
-# CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-# CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
-# CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 
 #
 # Memory Debugging
 #
 # CONFIG_PAGE_EXTENSION is not set
-# CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_PAGE_POISONING is not set
-# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
-# CONFIG_DEBUG_STACK_USAGE is not set
-# CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-# CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_HAVE_ARCH_KASAN=y
 # CONFIG_KASAN is not set
-# CONFIG_DEBUG_SHIRQ is not set
 
 #
 # Debug Lockups and Hangs
 #
-# CONFIG_LOCKUP_DETECTOR is not set
-CONFIG_DETECT_HUNG_TASK=y
-CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
-# CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
-CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
-# CONFIG_WQ_WATCHDOG is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_SCHED_DEBUG=y
-CONFIG_SCHED_INFO=y
+# CONFIG_SCHED_INFO is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
-CONFIG_SYSRQ_SCHED_DEBUG=y
-CONFIG_SCHEDSTATS=y
-# CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
-# CONFIG_DEBUG_PREEMPT is not set
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
 #
-# CONFIG_DEBUG_RT_MUTEXES is not set
-# CONFIG_DEBUG_SPINLOCK is not set
-# CONFIG_DEBUG_MUTEXES is not set
-# CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
-# CONFIG_DEBUG_LOCK_ALLOC is not set
-# CONFIG_PROVE_LOCKING is not set
-# CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_ATOMIC_SLEEP is not set
-# CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
-# CONFIG_LOCK_TORTURE_TEST is not set
 CONFIG_STACKTRACE=y
-# CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
-# CONFIG_DEBUG_LIST is not set
-# CONFIG_DEBUG_PI_LIST is not set
-# CONFIG_DEBUG_SG is not set
-# CONFIG_DEBUG_NOTIFIERS is not set
-# CONFIG_DEBUG_CREDENTIALS is not set
 
 #
 # RCU Debugging
@@ -4673,14 +4612,8 @@ CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_PROVE_RCU is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_TORTURE_TEST is not set
-# CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 # CONFIG_RCU_STALL_WATCHDOG_BITE is not set
-# CONFIG_RCU_TRACE is not set
-# CONFIG_RCU_EQS_DEBUG is not set
-# CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
-# CONFIG_NOTIFIER_ERROR_INJECTION is not set
-# CONFIG_FAULT_INJECTION is not set
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
@@ -4723,10 +4656,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 #
 # Runtime Testing
 #
-# CONFIG_LKDTM is not set
-# CONFIG_TEST_LIST_SORT is not set
-# CONFIG_BACKTRACE_SELF_TEST is not set
-# CONFIG_RBTREE_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -4743,10 +4672,8 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
-# CONFIG_KGDB is not set
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_UBSAN is not set
-# CONFIG_ARM64_PTDUMP is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
