--- a/arch/arm64/configs/X00QD_defconfig
+++ b/arch/arm64/configs/X00QD_defconfig
@@ -146,7 +146,7 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
-# CONFIG_CGROUP_SCHEDTUNE is not set
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
@@ -164,8 +164,9 @@ CONFIG_UTS_NS=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
-# CONFIG_STUNE_ASSIST is not set
-# CONFIG_CPUSETS_ASSIST is not set
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSETS_ASSIST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
